# time_tracker

./: .gitignore  CLAUDE.md  LICENSE  NOTES.md  README.md  SETUP.md  SRS.md  TEST_COVERAGE_ANALYSIS.md  add_two_numbers.py  calculator.py  divide.py  email_validator.py  index.html  pubspec.yaml  sum_even_numbers.py  test_email_validator.py  test_time_tracker.py  time_tracker.py
abc_bank/: .gitignore  pom.xml
abc_bank_py/: .env.example  .gitignore  README.md  pyproject.toml
abc_bank_py/app/: config.py  db.py  enums.py  errors.py  main.py
abc_bank_py/app/models/: __init__.py  account.py  notification.py  password_reset.py  transaction.py  user.py
abc_bank_py/app/repos/: account_repo.py  notification_repo.py  password_reset_repo.py  role_repo.py  transaction_repo.py  user_repo.py
abc_bank_py/app/routers/: accounts.py  auth.py  transactions.py
abc_bank_py/app/schemas/: account.py  auth.py  common.py  notification.py  transaction.py
abc_bank_py/app/security/: deps.py  passwords.py  tokens.py
abc_bank_py/app/services/: account_service.py  auth_service.py  notification_service.py  transaction_service.py
abc_bank_py/tests/: conftest.py  stress_test_transfers.py  test_accounts.py  test_auth.py  test_security.py  test_transactions.py
backend/: .env.example  app.py  config.py  extensions.py  requirements.txt  schemas.py  seed.py
backend/middleware/: auth.py
frontend/: package.json
lib/: add_two_numbers.dart  main.dart
react-dashboard/: package.json
scripts/: time_tracker.py
server/: package-lock.json  package.json
test/: widget_test.dart
(+139 files in other folders)
